# holder

./: Cargo.toml  README.md
assets/terrains/: room.glb
src/: assets_loader.rs  camera.rs  character.rs  ground.rs  light.rs  main.rs  movement.rs  plane.rs
src/ui/: fps_counter.rs
