[package]
name = "holder"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.1", features = ["dynamic_linking"] }
leafwing-input-manager = "0.11.2"
bevy_rapier3d = { version = "0.23.0", features = ["debug-render-3d"] }
bevy_third_person_camera = "0.1.8"
bevy_editor_pls = "0.7.0"
